interpreter/tests/golden-files/vars.golden.enzo
error: undefined: $undefinedVar
    $undefinedVar;      // error: undefined: $undefinedVar
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: $x already defined
    $x: 10;             // error $x has already been declared
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: $x already defined
    $x: 1;              // error: $a already defined
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
100
100
error: cannot assign Text to Number
    $x <: "hello";      // error: cannot assign Text to Number
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
7
8
error: cannot assign Text to Number
    $z <: "oops";       // error: cannot assign Text to Number
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: $z already defined
    $z : "oops";       // error: $z already defined
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
10
10
20
20
30
30
30
55
55
error: cannot assign Text to Number
    $newImplicit <: "oops";     // error: cannot assign Text to Number
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
cool dude
cool dude
3
3
2
2
5
9
3
5
9
3
Syntax error: Unexpected token ';' at line 1, column 22.
Expected one of: LBRACE, LPAR, LSQB, NAME, SIGNED_NUMBER, STRING
    $meaning-of-life: 42;;  // error: extra semi-colon
                         ^
